content and images are added for project 12.

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         <h5>Visual Identity Design</h5>
                         <p class="smallFontBy08 cutBy10">I provide visual solution that best expresses your personality and business needs through compelling brand identity. 
                         <br/>
-                            <em class="points">Logo, Stationary, Marketing Collateral Design</em>
+                            <em class="points">Logo, Stationary, Marketing Collaterals</em>
                         </p>
                     </div>
                     <div class="span4 center">
@@ -710,8 +710,9 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-44061294-1', 'gridelicious.net');
+        ga('create', 'UA-54875922-1', 'auto');
         ga('send', 'pageview');
-    </script>
+
+</script>
 </body>
 </html>
