--- a/pages/portfolio/project_12.html
+++ b/pages/portfolio/project_12.html
@@ -1,38 +1,30 @@
 <section class="portfolio-item-details">
     <div class="row-fluid">
         <div class="span8">
-            <img src="http://placehold.it/900x600">
+            <img src="assets/images/pages/work/waselrosav1.jpg">
         </div>
         <div class="span4">
             <div class="close-portfolio">
                 <span>&#10006;</span>
                 <div class="clearfix"></div>
             </div>
-            <h5>Everyone</h5>
+            <h5>WASELROSA</h5>
             <article class="smallFontBy08">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    WASELROSA is an independent creative studio based in San Francisco. I work with clients to bring ideas to life through beautifully crafted and thoughtful design solutions. My holistic approach to design is used to create a unified visual experience across multiple channels, from online to offline and everything in between. I combine art and technology to create a refined digital experience that puts the user at the center of everything.<br/>
+                    <br/>This was my first website that I built from scratch. I painstakingly coded each and every bit, and I've learned so much from actually buidling this website. 
                 </p>
             </article>
-            <section class="website">
+             <section class="website">
                 <h5>Visit site</h5>
-                <a href="#" class="smallFontBy08">www.webaddress.com</a>
+                <p><a href="http://waselrosa.github.io/my_website/index.html" target="_blank" class="smallFontBy08">waselrosa 1.0</a></p>
+                <p><a href="https://www.behance.net/gallery/19800245/waselrosa-10-website-httpwaselrosagithubiomy_w" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a></p>
             </section>
-            
-            <div class="social-icons sicon-black bordered bordered-black">
-                <a href="#" class="sicon-white sicon-facebook"><i>Facebook</i></a>
-                <a href="#" class="sicon-white sicon-twitter"><i>Twitter</i></a>
-                <a href="#" class="sicon-white sicon-pinterest"><i>Pinterest</i></a>
-            </div>
-            
+
             <div class="submenu">
                 <ul>
                     <li>
-                        <span>Illustration</span>
-                    </li>
-                    <li>
-                        <span>Photography</span>
+                        <span>Website/ Web Design & Development</span>
                     </li>
                 </ul>
             </div>
