--- a/pages/portfolio/readmore.html
+++ b/pages/portfolio/readmore.html
@@ -6,15 +6,15 @@
             </div>
         </a>
 </li>
-<!-- <li class="span4 mix branding typography illustration mix_all">
-    <a href="#pages/portfolio/project_11.html" data-destination="portfolio-items" data-insert="before">
-        <img src="http://placehold.it/390x300">
+<li class="span4 mix typography">
+    <a href="#pages/portfolio/project_12.html" data-destination="portfolio-items" data-insert="before">
+        <img src="assets/images/pages/work/waselrosav1.png" width="390" height="300" alt="Unlikeness">
         <div class="portfolio-overlay">
-            <h4>Rum bottle</h4>
+            <h4>waselrosa 1.0</h4>
         </div>
     </a>
 </li>
-<li class="span4 mix photography illustration mix_all">
+<!-- <li class="span4 mix photography illustration mix_all">
    <a href="#pages/portfolio/project_12.html" data-destination="portfolio-items" data-insert="before">
         <img src="http://placehold.it/390x300">
         <div class="portfolio-overlay">
