fixed spelling errors and added content and images for projects.

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <a href="#pages/portfolio/project_9.html" data-destination="portfolio-items" data-insert="before">
                             <img src="assets/images/pages/work/unlikeness.png" width="390" height="300" alt="Unlikeness">
                             <div class="portfolio-overlay">
-                                <h4>The Land of Unlikness | Book Cover Illustration</h4>
+                                <h4>The Land of Unlikeness | Book Cover Illustration</h4>
                             </div>
                         </a>
                     </li>
@@ -427,7 +427,7 @@
                     </li>
                     <li class="span12">
                         <img src="assets/images/pages/blog/emptyq.jpg" alt="EmptyQuarter">
-                        <p class="smallFontBy08 photocaption">Roadtrip to Empty Quarter. Liwa, UAE 2011</p>
+                        <p class="smallFontBy08 photocaption">Road Trip to Empty Quarter. Liwa, UAE 2011</p>
                     </li>
                     <li class="span12">
                         <img src="assets/images/pages/blog/cappadocia.jpg" alt="Cappadocia">
