--- a/pages/portfolio/project_12.html
+++ b/pages/portfolio/project_12.html
@@ -12,7 +12,7 @@
             <article class="smallFontBy08">
                 <p>
                     WASELROSA is an independent creative studio based in San Francisco. I work with clients to bring ideas to life through beautifully crafted and thoughtful design solutions. My holistic approach to design is used to create a unified visual experience across multiple channels, from online to offline and everything in between. I combine art and technology to create a refined digital experience that puts the user at the center of everything.<br/>
-                    <br/>This was my first website that I built from scratch. I painstakingly coded each and every bit, and I've learned so much from actually buidling this website. 
+                    <br/>This was my first website that I built from scratch. I painstakingly coded each and every bit, and I've learned so much from actually building this website. 
                 </p>
             </article>
              <section class="website">
