--- a/pages/portfolio/project_5.html
+++ b/pages/portfolio/project_5.html
@@ -1,7 +1,7 @@
 <section class="portfolio-item-details">
     <div class="row-fluid">
         <div class="span8">
-            <img src="http://placehold.it/900x600">
+            <img src="assets/images/pages/work/ttl-web.jpg">
         </div>
         <div class="span4">
             <div class="close-portfolio">
@@ -11,13 +11,14 @@
             <h5>The Time Locket</h5>
             <article class="smallFontBy08">
                 <p>
-                    The Time Locket is a compelling story about a girl who flees modern day NYC to her grandmother's house in NC, but also found herself time travlled to The Lost Colony in Roanoke Island. This colony was named after the historical Roanoke Carolina Algonquian people who inhabited the region in the 16th century at the time of English exploration. Deborah's story is filled with plot twists, history, humor and romance.<b/>
+                    The Time Locket is a compelling story about a girl who flees modern day NYC to her grandmother's house in NC, but also found herself time traveled to The Lost Colony in Roanoke Island. This colony was named after the historical Roanoke Carolina Algonquian people who inhabited the region in the 16th century at the time of English exploration. Deborah's story is filled with plot twists, history, humor and romance.<b/>
                     <b/>The goal was to create an online extension of the book, The Time Locket. The author also commissioned me to do two illustration pieces for the website.
                 </p>
             </article>
             <section class="website">
                 <h5>Visit site</h5>
                 <a href="http://thetimelocket.com/" class="smallFontBy08">thetimelocket.com</a>
+                <p><a href="https://www.behance.net/gallery/18644889/The-Time-Locket-Website-Design" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a></p>
             </section>
             
             <div class="submenu">
