--- a/pages/portfolio/project_7.html
+++ b/pages/portfolio/project_7.html
@@ -11,7 +11,7 @@
             <h5>The Time Locket</h5>
             <article class="smallFontBy08">
                 <p>
-                    The Time Locket is a compelling story about a girl who flees modern day NYC to her grandmother's house in NC, but also found herself time travlled to The Lost Colony in Roanoke Island. This colony was named after the historical Roanoke Carolina Algonquian people who inhabited the region in the 16th century at the time of English exploration. Deborah's story is filled with plot twists, history, humor and romance.<b/>
+                    The Time Locket is a compelling story about a girl who flees modern day NYC to her grandmother's house in NC, but also found herself time traveled to The Lost Colony in Roanoke Island. This colony was named after the historical Roanoke Carolina Algonquian people who inhabited the region in the 16th century at the time of English exploration. Deborah's story is filled with plot twists, history, humor and romance.<b/>
                     <b/>The goal was to create a period approperiate logo for Deborah's website that encompasses Renaissance typeface with Victorian-Era patterns.
             </article>
             <section class="website">
