--- a/pages/portfolio/readmore.html
+++ b/pages/portfolio/readmore.html
@@ -10,7 +10,7 @@
     <a href="#pages/portfolio/project_12.html" data-destination="portfolio-items" data-insert="before">
         <img src="assets/images/pages/work/waselrosav1.png" width="390" height="300" alt="Unlikeness">
         <div class="portfolio-overlay">
-            <h4>waselrosa 1.0</h4>
+            <h4>waselrosa 1.0 | Website Design & Development</h4>
         </div>
     </a>
 </li>
