project 1 content and image are added.

--- a/pages/portfolio/project_1.html
+++ b/pages/portfolio/project_1.html
@@ -1,7 +1,7 @@
 <section class="portfolio-item-details">
     <div class="row-fluid">
         <div class="span8">
-            <img src="http://placehold.it/900x600">
+            <img src="assets/images/pages/work/aa-web.jpg">
         </div>
         <div class="span4">
             <div class="close-portfolio">
@@ -18,7 +18,7 @@
              <section class="website">
                 <h5>Visit site</h5>
                 <p><a href="http://www.architectsartist.com/" target="_blank" class="smallFontBy08">architectsartist.com</a></p>
-                <!-- <p><a href="https://www.behance.net/gallery/18648215/Branding-Logo-Design-Architects-Artist" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a></p> -->
+                <p><a href="https://www.behance.net/gallery/19844793/Architects-Artist-Web-Design-Development" target="_blank" class="smallFontBy08"><i class="icon-s-behance"></i></a></p>
             </section>
             
             <div class="submenu">
