online resume is added.

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             <article class="rosa-resume">
                 <div class="row-fluid">
                     <div class="span4 center">
-                        <a href="#pages/portfolio/project_13.html" data-destination="rosa-resume" data-insert="before"><img src="assets/images/pages/features/about06.svg" alt="online-resume icon"></a>
+                        <a href="./pages/blog/blog_1.html"><img src="assets/images/pages/features/about06.svg" alt="online-resume icon"></a>
                         <h5 class="resume">Rosa's Online Résumé</h5>
                     </div>
                     <div class="span4 center">
