created a link to online resume.

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                 <div class="row-fluid">
                     <div class="span4 center">
                         <a href="./pages/blog/blog_1.html"><img src="assets/images/pages/features/about06.svg" alt="online-resume icon"></a>
-                        <h5 class="resume">Rosa's Online Résumé</h5>
+                        <h5 class="resume"><a href="./pages/blog/blog_1.html">Rosa's Online Résumé</a></h5>
                     </div>
                     <div class="span4 center">
                         <a href="RosaChoi-resume2014.pdf" target="_blank"><img src="assets/images/pages/features/about04.svg" alt="pdf-resume icon"></a>
